# fractal

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: ARCHITECTURE.md  ASYNC_SUPPORT.md  DELEGATION_TRACING_IMPLEMENTATION.md  MODEL_SELECTION.md  MULTIAGENT.md  REFACTORING.md  ROADMAP.md  TRACE_VISUALIZATION.md  TRACING.md
examples/: README.md  async_example.py  basic_example.py  delegation_tracing_example.py  dynamic_prompt_example.py  fastapi_example.py  fastapi_multiagent.py  inheritance_example.py  multi_run_demo.py  multiagent_example.py  rag_example.py  tool_namespacing_example.py  tracing_example.py  visualization_demo.py
examples/traces/: delegation_tracing.jsonl  demo_3f2b199ea2bf.jsonl  demo_4dd2b9fdae03.jsonl  demo_6e8a30b0e392.jsonl  demo_7e4f1d662a48.jsonl  demo_922da6c0754b.jsonl  demo_befe95fb7f04.jsonl  multi_level_delegation.jsonl  tracing_example.jsonl  visualization_demo.jsonl
examples/visualizations/: visualization_demo.html
fractal/: __init__.py  agent.py  models.py  parser.py  toolkit.py
fractal/observability/: __init__.py  __main__.py  html_visualizer.py  terminal_viewer.py  tracing.py
tests/: README.md
tests/e2e/: test_real_api.py
tests/integration/: test_async.py  test_client.py  test_delegation_tracing.py  test_error_handling.py
tests/unit/: test_content_types.py  test_context_window.py  test_delegate_schema.py  test_dynamic_prompt.py  test_tracing.py
